improved thread local cleanup